03 December 2007

* Bug fix: restore non-blocking mode properly after constructing SSL
  connection. This bug prevented SSL over a proxy working.

06 November 2007

* Use +FLAGS.SILENT instead of +FLAGS to mark IMAP mail as deleted, as we
  don't need the new flags.

03 November 2007

* Exchange sometimes includes a FLAGS update as part of its FETCH response,
  which made fdm complain. Change to accept it without error. Reported by
  Leo D'Angelo.
* Google IMAP has problems with naked flag lists on STORE commands (which are
  valid). Change to enclose the flags list in brackets. Reported by Andrew
  Pantyukhin.

25 October 2007

* New option, no-create, prevents fdm creating missing path components or files
  when delivering to maildirs or mboxes.
* Create entire paths if missing when delivering to maildirs or mboxes.

10 October 2007

* Don't accept "+OK N" as well as "+OK N M" in response to STAT.
* New option: command-user. This is the user used to run exec/pipe match
  conditions if one is not specified. The default is the user who ran fdm
  (root if running as root).

09 October 2007

* Command line cache manipulation. The following commands are available:

	fdm cache list [path]
		List details of cache path or all caches in the configuration
		file if not specified.

	fdm cache dump path
		Dump cache keys in the form "key time" where time is is
		Unix time (seconds from epoch). This allows to easily sort by
		time:
		
			fdm cache dump ~/my/cache|sort -n +2

		Or to print the time in a particular date format:
	
			fdm cache dump ~/my/cache|while read i; do
				set -- $i
				echo $1 `date -r$2 "+%Y-%m-%d% %H:%M:%S"`
			done

		And so on.

	fdm cache add path key
	fdm cache remove path key
		Add a key to or remove a key from a cache.

	fdm cache clear path
		Clear an entire cache (remove all the keys).

	This feature suggested by Thomas@BIC.
* Restore regress files to distribution. Requested by Mike Erdely for the