@@ -1,3 +1,9 @@
+08 December 2007
+
+* Don't let mbox or maildir fetch code exit and free stuff until all the mail is
+  dealt with (queues are empty). Fixes mbox fetching problems reported by
+  akarinotengoku at gmail.com.
+
 03 December 2007
 
 * Bug fix: restore non-blocking mode properly after constructing SSL
@@ -773,4 +779,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.180 2007-12-03 20:53:18 nicm Exp $
+$Id: CHANGES,v 1.181 2007-12-08 20:22:36 nicm Exp $
